Fixed small layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -860,7 +860,6 @@ h5 {
 .section {
   margin-top: 3rem;
   padding: 0 3rem;
-  height: 100vh;
   height: calc(var(--vvh, 1vh) * 100);
   width: 100vw;
   scroll-snap-align: start;
@@ -873,7 +872,7 @@ h5 {
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      height: calc(100vh - 101px); }
+      height: calc(var(--vvh, 1vh) * 100 - 101px); }
       .section--aboutme__text > * {
         margin-bottom: 1rem; }
     @media only screen and (min-width: 23em) {
