--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,7 +1,6 @@
 .section {
   margin-top: 3rem;
   padding: 0 3rem;
-  height: 100vh;
   height: calc(var(--vvh, 1vh) * 100);
   width: 100vw;
   scroll-snap-align: start;
@@ -14,7 +13,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-evenly;
-      height: calc(100vh - 101px);
+      height: calc(var(--vvh, 1vh) * 100 - 101px);
       & > * {
         margin-bottom: 1rem;
       }
